base css and html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <div class="calculator">
+        <div class="displays borders">
+          <div class="displaySmall">
+            <p class="txtDisplay small">1+4+2</p>
+            <p class="txtDisplay small backgroundTxt">88888888888888888888</p>
+          </div>
+          <div class="displayBig">
+            <p class="txtDisplay big">123</p>
+            <p class="txtDisplay big backgroundTxt">88888888</p>
+          </div>
+        </div>
+        <div class="btn-wrapper borders">
+          <button class="btn procent white-btn">%</button>
+          <button class="btn root white-btn">√</button>
+          <button class="btn ce orange-btn">CE</button>
+          <button class="btn c orange-btn">C</button>
+          <button class="btn 7">7</button>
+          <button class="btn 8">8</button>
+          <button class="btn 9">9</button>
+          <button class="btn minus white-btn">-</button>
+          <button class="btn 4">4</button>
+          <button class="btn 5">5</button>
+          <button class="btn 6">6</button>
+          <button class="btn divide white-btn">/</button>
+          <button class="btn 1">1</button>
+          <button class="btn 2">2</button>
+          <button class="btn 3">3</button>
+          <button class="btn multiply white-btn">x</button>
+          <button class="btn 0">0</button>
+          <button class="btn dot">.</button>
+          <button class="btn equal white-btn">=</button>
+          <button class="btn plus white-btn">+</button>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
