--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="displays borders">
           <div class="displaySmall">
             <p class="txtDisplay small">1+4+2</p>
-            <p class="txtDisplay small backgroundTxt">88888888888888888888</p>
+            <p aria-hidden class="txtDisplay small backgroundTxt">88888888888888888888</p>
           </div>
           <div class="displayBig">
             <p class="txtDisplay big">123</p>
-            <p class="txtDisplay big backgroundTxt">88888888</p>
+            <p aria-hidden class="txtDisplay big backgroundTxt">88888888</p>
           </div>
         </div>
         <div class="btn-wrapper borders">
