--- a/index.html
+++ b/index.html
@@ -13,35 +13,37 @@
       <div class="calculator">
         <div class="displays borders">
           <div class="displaySmall">
-            <p class="txtDisplay small">1+4+2</p>
-            <p aria-hidden class="txtDisplay small backgroundTxt">88888888888888888888</p>
+            <p id="displaySmall" class="txtDisplay small"></p>
+            <p aria-hidden class="txtDisplay small backgroundTxt">
+              88888888888888888888
+            </p>
           </div>
           <div class="displayBig">
-            <p class="txtDisplay big">123</p>
+            <p id="displayBig" class="txtDisplay big"></p>
             <p aria-hidden class="txtDisplay big backgroundTxt">88888888</p>
           </div>
         </div>
         <div class="btn-wrapper borders">
-          <button class="btn procent white-btn">%</button>
-          <button class="btn root white-btn">√</button>
-          <button class="btn ce orange-btn">CE</button>
-          <button class="btn c orange-btn">C</button>
-          <button class="btn 7">7</button>
-          <button class="btn 8">8</button>
-          <button class="btn 9">9</button>
-          <button class="btn minus white-btn">-</button>
-          <button class="btn 4">4</button>
-          <button class="btn 5">5</button>
-          <button class="btn 6">6</button>
-          <button class="btn divide white-btn">/</button>
-          <button class="btn 1">1</button>
-          <button class="btn 2">2</button>
-          <button class="btn 3">3</button>
-          <button class="btn multiply white-btn">x</button>
-          <button class="btn 0">0</button>
-          <button class="btn dot">.</button>
-          <button class="btn equal white-btn">=</button>
-          <button class="btn plus white-btn">+</button>
+          <button id="percent" class="btn white-btn">%</button>
+          <button id="root" class="btn white-btn">√</button>
+          <button id="ce" class="btn orange-btn">CE</button>
+          <button id="c" class="btn orange-btn">C</button>
+          <button id="7" class="btn">7</button>
+          <button id="8" class="btn">8</button>
+          <button id="9" class="btn">9</button>
+          <button id="minus" class="btn minus white-btn">-</button>
+          <button id="4" class="btn">4</button>
+          <button id="5" class="btn">5</button>
+          <button id="6" class="btn">6</button>
+          <button id="divide" class="btn white-btn">/</button>
+          <button id="1" class="btn">1</button>
+          <button id="2" class="btn">2</button>
+          <button id="3" class="btn">3</button>
+          <button id="multiply" class="btn white-btn">x</button>
+          <button id="0" class="btn">0</button>
+          <button id="dot" class="btn">.</button>
+          <button id="equal" class="btn white-btn">=</button>
+          <button id="plus" class="btn white-btn">+</button>
         </div>
       </div>
     </main>
