--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <button id="4" class="btn">4</button>
           <button id="5" class="btn">5</button>
           <button id="6" class="btn">6</button>
-          <button id="divide" class="btn white-btn">/</button>
+          <button id="divide" class="btn white-btn">÷</button>
           <button id="1" class="btn">1</button>
           <button id="2" class="btn">2</button>
           <button id="3" class="btn">3</button>
