--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
         <div class="btn-wrapper borders">
           <button id="percent" class="btn white-btn">%</button>
           <button id="root" class="btn white-btn">√</button>
-          <button id="ce" class="btn orange-btn">CE</button>
+          <button id="ce" class="btn orange-btn" data-key="Backspace">CE</button>
           <button id="c" class="btn orange-btn">C</button>
-          <button id="7" class="btn">7</button>
-          <button id="8" class="btn">8</button>
-          <button id="9" class="btn">9</button>
-          <button id="minus" class="btn minus white-btn">-</button>
-          <button id="4" class="btn">4</button>
-          <button id="5" class="btn">5</button>
-          <button id="6" class="btn">6</button>
-          <button id="divide" class="btn white-btn">÷</button>
-          <button id="1" class="btn">1</button>
-          <button id="2" class="btn">2</button>
-          <button id="3" class="btn">3</button>
-          <button id="multiply" class="btn white-btn">x</button>
-          <button id="0" class="btn">0</button>
-          <button id="dot" class="btn">.</button>
-          <button id="equal" class="btn white-btn">=</button>
-          <button id="plus" class="btn white-btn">+</button>
+          <button id="7" class="btn" data-key="7">7</button>
+          <button id="8" class="btn" data-key="8">8</button>
+          <button id="9" class="btn" data-key="9">9</button>
+          <button id="minus" class="btn minus white-btn" data-key="-">-</button>
+          <button id="4" class="btn" data-key="4">4</button>
+          <button id="5" class="btn" data-key="5">5</button>
+          <button id="6" class="btn" data-key="6">6</button>
+          <button id="divide" class="btn white-btn" data-key="/">÷</button>
+          <button id="1" class="btn" data-key="1">1</button>
+          <button id="2" class="btn" data-key="2">2</button>
+          <button id="3" class="btn" data-key="3">3</button>
+          <button id="multiply" class="btn white-btn" data-key="*">x</button>
+          <button id="0" class="btn" data-key="0">0</button>
+          <button id="dot" class="btn" data-key=",">.</button>
+          <button id="equal" class="btn white-btn" data-key="Enter">=</button>
+          <button id="plus" class="btn white-btn" data-key="+">+</button>
         </div>
       </div>
     </main>
