--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculator</title>
+    <title>Funny Calculator</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -17,8 +17,6 @@
             <p aria-hidden class="txtDisplay small backgroundTxt">
               88888888888888888888
             </p>
-            
-            
           </div>
           <div class="displayBig">
             <p id="displayBig" class="txtDisplay big"></p>
@@ -28,7 +26,9 @@
         <div class="btn-wrapper borders">
           <button id="percent" class="btn white-btn">%</button>
           <button id="root" class="btn white-btn">√</button>
-          <button id="ce" class="btn orange-btn" data-key="Backspace">CE</button>
+          <button id="ce" class="btn orange-btn" data-key="Backspace">
+            CE
+          </button>
           <button id="c" class="btn orange-btn">C</button>
           <button id="7" class="btn" data-key="7">7</button>
           <button id="8" class="btn" data-key="8">8</button>
