btn c keybord added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <button id="ce" class="btn orange-btn" data-key="Backspace">
             CE
           </button>
-          <button id="c" class="btn orange-btn">C</button>
+          <button id="c" class="btn orange-btn" data-key="c">C</button>
           <button id="7" class="btn" data-key="7">7</button>
           <button id="8" class="btn" data-key="8">8</button>
           <button id="9" class="btn" data-key="9">9</button>
