focus bug fixed

--- a/index.html
+++ b/index.html
@@ -24,28 +24,92 @@
           </div>
         </div>
         <div class="btn-wrapper borders">
-          <button id="percent" class="btn white-btn">%</button>
-          <button id="root" class="btn white-btn">√</button>
-          <button id="ce" class="btn orange-btn" data-key="Backspace">
+          <button id="percent" class="btn white-btn" onclick="this.blur();">%</button>
+          <button id="root" class="btn white-btn" onclick="this.blur();">√</button>
+          <button id="ce" class="btn orange-btn" data-key="Backspace" onclick="this.blur();">
             CE
           </button>
-          <button id="c" class="btn orange-btn" data-key="c">C</button>
-          <button id="7" class="btn" data-key="7">7</button>
-          <button id="8" class="btn" data-key="8">8</button>
-          <button id="9" class="btn" data-key="9">9</button>
-          <button id="minus" class="btn minus white-btn" data-key="-">-</button>
-          <button id="4" class="btn" data-key="4">4</button>
-          <button id="5" class="btn" data-key="5">5</button>
-          <button id="6" class="btn" data-key="6">6</button>
-          <button id="divide" class="btn white-btn" data-key="/">÷</button>
-          <button id="1" class="btn" data-key="1">1</button>
-          <button id="2" class="btn" data-key="2">2</button>
-          <button id="3" class="btn" data-key="3">3</button>
-          <button id="multiply" class="btn white-btn" data-key="*">x</button>
-          <button id="0" class="btn" data-key="0">0</button>
-          <button id="dot" class="btn" data-key=",">.</button>
-          <button id="equal" class="btn white-btn" data-key="Enter">=</button>
-          <button id="plus" class="btn white-btn" data-key="+">+</button>
+          <button
+            id="c"
+            class="btn orange-btn"
+            data-key="c"
+            onclick="this.blur();"
+          >
+            C
+          </button>
+          <button id="7" class="btn" data-key="7" onclick="this.blur();">
+            7
+          </button>
+          <button id="8" class="btn" data-key="8" onclick="this.blur();">
+            8
+          </button>
+          <button id="9" class="btn" data-key="9" onclick="this.blur();">
+            9
+          </button>
+          <button
+            id="minus"
+            class="btn minus white-btn"
+            data-key="-"
+            onclick="this.blur();"
+          >
+            -
+          </button>
+          <button id="4" class="btn" data-key="4" onclick="this.blur();">
+            4
+          </button>
+          <button id="5" class="btn" data-key="5" onclick="this.blur();">
+            5
+          </button>
+          <button id="6" class="btn" data-key="6" onclick="this.blur();">
+            6
+          </button>
+          <button
+            id="divide"
+            class="btn white-btn"
+            data-key="/"
+            onclick="this.blur();"
+          >
+            ÷
+          </button>
+          <button id="1" class="btn" data-key="1" onclick="this.blur();">
+            1
+          </button>
+          <button id="2" class="btn" data-key="2" onclick="this.blur();">
+            2
+          </button>
+          <button id="3" class="btn" data-key="3" onclick="this.blur();">
+            3
+          </button>
+          <button
+            id="multiply"
+            class="btn white-btn"
+            data-key="*"
+            onclick="this.blur();"
+          >
+            x
+          </button>
+          <button id="0" class="btn" data-key="0" onclick="this.blur();">
+            0
+          </button>
+          <button id="dot" class="btn" data-key="," onclick="this.blur();">
+            .
+          </button>
+          <button
+            id="equal"
+            class="btn white-btn"
+            data-key="Enter"
+            onclick="this.blur();"
+          >
+            =
+          </button>
+          <button
+            id="plus"
+            class="btn white-btn"
+            data-key="+"
+            onclick="this.blur();"
+          >
+            +
+          </button>
         </div>
       </div>
     </main>
